--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   <h3 class="text-center card-title fs-4">보라카이 3박 4일</h3>
                   <p class="text-center card-text">카사필라 리조트 숙박</p>
                   <p class="card-text">총 경비 : 30만원</p>
-                   <a href="#" class="btn btn-warning btn-sm">read more</a>
+                   <a href="index.innerpage2" class="btn btn-warning btn-sm">read more</a>
               </div>
           </div>
       </div>
