--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                  <h3 class="text-center card-title fs-4">방콕파타야 5일</h3>
                  <p class="text-center card-text">게하 2박 + 힐튼리조트 1박 </p>
                  <p class="card-text"> 총 경비 : 65만원 </p>
-                 <a href="innerpage2.html" class="btn btn-warning btn-sm">read more</a>
+                 <a href="#" class="btn btn-warning btn-sm">read more</a>
               </div>
           </div>
       </div>
